# laurel

./: README.md  cabal.project  dblang.cabal  flake.nix
dblang/: dblang.cabal
dblang-cli/: dblang-cli.cabal
dblang-cli/app/: Repl.hs
dblang-csv/: dblang-csv.cabal
dblang-csv/src/Dblang/CSV/: Run.hs
dblang-csv/src/Dblang/Run/: CSV.hs
dblang-postgres/: dblang-postgres.cabal
dblang-postgres/src/Dblang/Postgres/: Compile.hs  Run.hs
dblang-postgres/test/: Main.hs
dblang-postgres/test/Test/Dblang/Compile/: Postgres.hs
dblang-postgres/test/Test/Dblang/Postgres/: Compile.hs
dblang-postgres/test/data/: example.csv
dblang/src/: Pretty.hs
dblang/src/Dblang/: Eval.hs  Expr.hs  Parse.hs  Run.hs  Syntax.hs  Type.hs  Typecheck.hs  Value.hs
dblang/src/Dblang/Compile/: Postgres.hs
dblang/src/Dblang/Definition/: Pretty.hs  Table.hs
dblang/src/Dblang/Definition/Table/: Pretty.hs
dblang/src/Dblang/Expr/: Pretty.hs
dblang/src/Dblang/Run/: Postgres.hs
dblang/src/Dblang/Value/: Pretty.hs
dblang/test/: Main.hs
laurel/: laurel.cabal
laurel-cli/: laurel-cli.cabal
laurel-cli/app/: Main.hs  Repl.hs
laurel-core/: laurel-core.cabal
laurel-core/src/Laurel/: Command.hs  Eval.hs  Expr.hs  Parse.hs  Run.hs  Syntax.hs  Type.hs  Typecheck.hs  Value.hs
laurel-core/src/Laurel/Definition/: Constraint.hs  Pretty.hs  Table.hs
laurel-core/src/Laurel/Expr/: Pretty.hs
laurel-core/src/Laurel/Value/: Pretty.hs
laurel-core/test/Test/Laurel/: Parse.hs  Typecheck.hs
laurel-csv/: laurel-csv.cabal
laurel-csv/src/Laurel/CSV/: Run.hs
laurel-postgres/: laurel-postgres.cabal
laurel-postgres/src/Laurel/Postgres/: Compile.hs  Run.hs
laurel-postgres/test/: Main.hs
laurel-postgres/test/Test/Laurel/Postgres/: Compile.hs
laurel/src/: Pretty.hs
laurel/src/Laurel/: Definition.hs  Parse.hs  Syntax.hs  Typecheck.hs
laurel/src/Laurel/Definition/Table/: Pretty.hs
laurel/test/: Main.hs
notes/: 2023-05-24-roadmap.md  compiling-monadic-bind.md  composite-type-references.md  extracting-types-from-information-schema.md  formatting-values.md  group-by.md  implement-set-or-insert-first.md  improvements.md  modifying-tables.md  querying-csvs.md  sketching-repl-usage.md  sum-type-references.md
notes/tasks/: allow-insert-command-in-repl.md  dont-crash-when-connecting-to-missing-file.md  fix-lists.md  fix-repl-cursor.md  handle-check-constraints-in-postgres.md  handle-foreign-key-constraints-in-postgres.md  handle-user-defined-types-in-postgres.md  pretty-errors-in-repl.md  print-schema-after-connecting.md  repl-commands-list.md  repl-history-tracking.md  repl-refactor.md  string-parsing.md  variants.md
src/Dblang/: Command.hs  Definition.hs  Expr.hs  Parse.hs  Syntax.hs  Type.hs  Typecheck.hs  Value.hs
src/Dblang/Compile/: Postgres.hs
src/Dblang/Definition/: Constraint.hs
src/Dblang/Run/: CSV.hs  Postgres.hs
src/Dblang/Value/: Pretty.hs
test/: Main.hs
test/Test/Dblang/: Parse.hs  Typecheck.hs
test/Test/Dblang/Compile/: Postgres.hs
