cabal-version:      3.0
name:               dblang
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

common extensions
    default-extensions:
        DuplicateRecordFields
        NamedFieldPuns
        NoFieldSelectors
        OverloadedLists
        OverloadedStrings

library
    import:           warnings, extensions
    exposed-modules:
        Dblang.Compile.Postgres
        Dblang.Definition
        Dblang.Expr
        Dblang.Parse
        Dblang.Syntax
        Dblang.Type
        Dblang.Typecheck
    build-depends:
        base ^>=4.16.4.0,
        bound,
        deriving-compat,
        mtl,
        unordered-containers,
        parsers,
        text >=2.0,
        sage,
        vector
    hs-source-dirs:   src
    default-language: Haskell2010

executable dblang
    import:           warnings, extensions
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        dblang

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite dblang-test
    import:           warnings, extensions
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        Test.Dblang.Compile.Postgres
        Test.Dblang.Parse
        Test.Dblang.Typecheck
    build-depends:
        base ^>=4.16.4.0,
        bound,
        dblang,
        hspec,
        sage,
        text
