cabal-version:      3.0
name:               dblang-cli
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -Werror

common extensions
    default-extensions:
        DuplicateRecordFields
        NamedFieldPuns
        NoFieldSelectors
        OverloadedLists
        OverloadedStrings

executable dblang
    import:           warnings, extensions
    main-is:          Main.hs
    other-modules:
        Repl
    build-depends:
        base ^>=4.16.4.0,
        ansi-terminal,
        dblang,
        dblang-csv,
        dblang-postgres,
        hasql,
        mtl,
        optparse-applicative,
        parsers,
        sage,
        streaming,
        text >=2.0,
        unordered-containers,
        vector
    hs-source-dirs:   app
    default-language: Haskell2010