cabal-version:      3.0
name:               dblang-csv
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -Werror

common extensions
    default-extensions:
        DuplicateRecordFields
        NamedFieldPuns
        NoFieldSelectors
        OverloadedLists
        OverloadedStrings

library
    import:           warnings, extensions
    exposed-modules:
        Dblang.Run.CSV
    build-depends:
        base ^>=4.16.4.0,
        bytestring,
        cassava,
        dblang,
        filepath,
        mtl,
        parsers,
        sage,
        text >=2.0,
        unordered-containers,
        vector
    hs-source-dirs:   src
    default-language: Haskell2010