cabal-version:      3.0
name:               laurel-postgres
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -Werror

common extensions
    default-extensions:
        DuplicateRecordFields
        NamedFieldPuns
        NoFieldSelectors
        OverloadedLists
        OverloadedStrings

library
    import:           warnings, extensions
    exposed-modules:
        Laurel.Postgres.Compile
        Laurel.Postgres.Run
    build-depends:
        base ^>=4.16.4.0,
        bound,
        -- for use with hasql
        contravariant,
        laurel,
        hasql,
        mtl,
        parsers,
        sage,
        text >=2.0,
        unordered-containers,
        vector
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite laurel-postgres-test
    import:           warnings, extensions
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        Test.Laurel.Postgres.Compile
    build-depends:
        base ^>=4.16.4.0,
        bound,
        laurel,
        laurel-postgres,
        hspec,
        sage,
        text,
        vector