cabal-version:      3.0
name:               laurel
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -Werror

common extensions
    default-extensions:
        DuplicateRecordFields
        NamedFieldPuns
        NoFieldSelectors
        OverloadedLists
        OverloadedStrings

library
    import:           warnings, extensions
    exposed-modules:
        Laurel.Command
        Laurel.Definition
        Laurel.Definition.Constraint
        Laurel.Definition.Table
        Laurel.Definition.Table.Pretty
        Laurel.Definition.Pretty
        Laurel.Expr
        Laurel.Expr.Pretty
        Laurel.Eval
        Laurel.Parse
        Laurel.Run
        Laurel.Syntax
        Laurel.Type
        Laurel.Typecheck
        Laurel.Value
        Laurel.Value.Pretty
        Pretty
    build-depends:
        base ^>=4.16.4.0,
        bound,
        bytestring,
        deriving-compat,
        dlist,
        filepath,
        hashable,
        mtl,
        unordered-containers,
        parsers,
        sage,
        text >=2.0,
        vector,
        -- instance Hashable a => Hashable (Vector a)
        vector-instances
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite laurel-test
    import:           warnings, extensions
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        Test.Laurel.Parse
        Test.Laurel.Typecheck
    build-depends:
        base ^>=4.16.4.0,
        bound,
        laurel,
        hspec,
        sage,
        text,
        vector